# pdf-toolkit-ocr

./: .gitignore  .pre-commit-config.yaml  BACKENDS.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUSH_INSTRUCTIONS.md  GOOGLE_DRIVE_API_LIMITS.md  LICENSE  MANIFEST.in  MULTI_BACKEND_IMPLEMENTATION.md  POPPLER_INSTALLATION_WINDOWS.md  README.md  SETUP_GUIDE.md  TEST_DOCUMENTATION.md  pdf_toolkit.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh  setup.py  test_pdf_toolkit.py
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml  tests.yml
