[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toolkit-ocr"
version = "1.0.0"
description = "Unified tool for PDF to Image conversion and Google Drive OCR processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Samvaran Kashyap", email = "samvarankashyap@users.noreply.github.com"}
]
keywords = ["pdf", "ocr", "telugu", "google-drive", "image-conversion", "document-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pdf2image>=1.17.0",
    "Pillow>=12.0.0",
    "img2pdf>=0.6.1",
    "google-api-python-client>=2.185.0",
    "oauth2client>=4.1.3",
    "PyPDF2>=3.0.1",
    "packaging>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.11.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pylint>=3.3.1",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
pdf-toolkit = "pdf_toolkit:main"

[project.urls]
Homepage = "https://github.com/samvarankashyap/pdf-toolkit-ocr"
Documentation = "https://github.com/samvarankashyap/pdf-toolkit-ocr/blob/main/README.md"
Repository = "https://github.com/samvarankashyap/pdf-toolkit-ocr"
"Bug Reports" = "https://github.com/samvarankashyap/pdf-toolkit-ocr/issues"
Changelog = "https://github.com/samvarankashyap/pdf-toolkit-ocr/blob/main/CHANGELOG.md"

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=pdf_toolkit --cov-report=term-missing --cov-report=html"
testpaths = [
    ".",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["pdf_toolkit"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint.main]
max-line-length = 127
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.flake8]
max-line-length = 127
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist",
]
